--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Links to Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
+            
+        <div class="container">
+
+            <nav class="navabr navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">Brita Ramsay</a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="#">About Me</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+        </div>
 
     </body>
     <footer>
