--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,23 @@
     </head>
     <body>
 
+        <div class="container">
+
+            <nav class="navabr navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="index.html">Brita Ramsay</a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html">About Me</a></li>
+                        <li class="active"><a href="#">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+    
+        </div>
+       
     </body>
     <footer>
 
