Added social link images

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Links to Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
 
@@ -47,9 +46,11 @@
                     </form>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    <h3>Connect with Me</h3>        
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                    <h3>Connect with Me</h3>    
+
+                    <img src="assets/images/github.png" class="social">
+                    <img src="assets/images/linkedin.png" class="social">
+                    <img src="assets/images/stackoverflow.png" class="social">
                 </div>
             </div>
     
