--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Links to Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
             
@@ -31,9 +32,11 @@
                     
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    <h3>Connect with Me</h3>        
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                    <h3>Connect with Me</h3>  
+
+                    <img src="assets/images/github.png" class="social">
+                    <img src="assets/images/linkedin.png" class="social">
+                    <img src="assets/images/stackoverflow.png" class="social">
                 </div>
             </div>
 
