--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                     <h3>Connect with Me</h3>  
 
-                    <img src="assets/images/github.png" class="social">
-                    <img src="assets/images/linkedin.png" class="social">
-                    <img src="assets/images/stackoverflow.png" class="social">
+                    <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
+                    <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/linkedin.png" class="social"></a>
+                    <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
                 </div>
             </div>
 
