--- a/contact.html
+++ b/contact.html
@@ -11,23 +11,22 @@
     </head>
     <body>
 
-        <div class="container">
-
-            <nav class="navabr navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">Brita Ramsay</a>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">About Me</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li class="active"><a href="#">Contact</a></li>
-                    </ul>
+        <nav class="navabr navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Brita Ramsay</a>
                 </div>
-            </nav>
-
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">About Me</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li class="active"><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    
+        <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <div class="col-md-7" id="main-section">
                     <h3>Contact</h3>
                     <form>
                         <div class="form-group">
@@ -45,17 +44,22 @@
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="col-md-4" id="sidebar">
                     <h3>Connect with Me</h3>    
-
-                    <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
-                    <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/linkedin.png" class="social"></a>
-                    <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
+                    <div id="connect">
+                        <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
+                        <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/linkedin.png" class="social"></a>
+                        <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
+                    </div>
                 </div>
             </div>
     
         </div>
-
+        <div class="container" id="footer">
+            <div class="footer navbar-inverse navbar-fixed-bottom">
+                <p>&copy;Brita Ramsay 2018</p>
+            </div>
+        </div>
     </body>
     <footer>
 
