--- a/index.html
+++ b/index.html
@@ -11,30 +11,29 @@
     </head>
     <body>
             
-        <div class="container">
-
-            <nav class="navabr navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Brita Ramsay</a>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">About Me</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
+        <nav class="navabr navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Brita Ramsay</a>
                 </div>
-            </nav>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="#">About Me</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
 
+        <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" id="main-section">
                     <h3>About Me</h3>
                     
                     <p><img style="padding: 0 15px; float: left;" src="assets/images/linkdin.jpg" height="200">
                     <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p> -->
                     I am a Computer Science student at the Univercity of Central Florida.  I only have 5 courses left until I graduate, but I am taking a semester off to attend the UCF Coding Bootcamp. I hope to become somewhat of a an expert on web development and build a great portfolio to show future employers. I am preparing to get an internship in the Fall semester that will help me get closer to a career in Computer Science and give me first-hand experience on a corpoarate devolopment team.</p>
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="sidebar">
                     <h3>Connect with Me</h3>  
 
                     <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
@@ -42,7 +41,11 @@
                     <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
                 </div>
             </div>
-
+            <div class="container" id="footer">
+                <div class="footer navbar-inverse navbar-fixed-bottom">
+                    <p>&copy;Brita Ramsay 2018</p>
+                </div>
+            </div>
         </div>
 
     </body>
