--- a/contact.html
+++ b/contact.html
@@ -26,38 +26,48 @@
     
         <div class="container">
             <div class="row">
-                <div class="col-md-7" id="main-section">
-                    <h3>Contact</h3>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name:</label>
-                            <input type="name" class="form-control" id="name" placeholder="John Smith">
+                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                    <div class="panel panel-default" id="main-section">
+                        <div class="panel-heading" id="panel-heading">
+                            <h3>Contact</h3>
                         </div>
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                        <div class="panel-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="name">Name:</label>
+                                    <input type="name" class="form-control" id="name" placeholder="John Smith">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message:</label>
+                                    <textarea class="form-control" rows="5" id="message"></textarea>
+                                </div>    
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </form>
                         </div>
-                        <div class="form-group">
-                            <label for="message">Message:</label>
-                            <textarea class="form-control" rows="5" id="message"></textarea>
-                        </div>    
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                </div>
-                <div class="col-md-4" id="sidebar">
-                    <h3>Connect with Me</h3>    
-                    <div id="connect">
-                        <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
-                        <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/linkedin.png" class="social"></a>
-                        <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
-                    </div>
+                    </div> 
+                </div>                    
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <div class="panel panel-default" id="sidebar">
+                        <div class="panel-heading" id="panel-heading">
+                            <h3>Connect with Me</h3>  
+                        </div>
+                        <div class="panel-body">
+                            <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
+                            <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/linkedin.png" class="social"></a>
+                            <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
+                        </div>
+                    </div> 
                 </div>
             </div>
     
-        </div>
-        <div class="container" id="footer">
-            <div class="footer navbar-inverse navbar-fixed-bottom">
-                <p>&copy;Brita Ramsay 2018</p>
+            <div class="container" id="footer">
+                <div class="footer navbar-inverse navbar-fixed-bottom">
+                    <p>&copy;Brita Ramsay 2018</p>
+                </div>
             </div>
         </div>
     </body>
