Fixed sidebar panel

--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@
                         <div class="panel-heading" id="panel-heading">
                             <h3>Connect with Me</h3>  
                         </div>
-                        <div class="panel-body">
-                            <div class="connect">
-                                <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="social"></a>
-                                <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/linkedin.png" class="social"></a>
-                                <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="social"></a>
+                        <div class="panel-body" id="center">
+                            <div class="row">
+                                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                    <a href="https://github.com/britaramsay"><img src="assets/images/github.png" class="center-block"></a>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                    <a href="https://www.linkedin.com/in/brita-ramsay-a5947a116"><img src="assets/images/link.png" class="center-block"></a>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                    <a href="https://stackoverflow.com/users/9085355/britaramsay?tab=profile"><img src="assets/images/stackoverflow.png" class="center-block" id="last-img"></a>
+                                </div>
                             </div>
                         </div>
                     </div> 
