--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
             
         <nav class="navabr navbar-inverse">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Brita Ramsay</a>
                 </div>
