--- a/portfolio.html
+++ b/portfolio.html
@@ -8,26 +8,32 @@
         <!--Links to Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
-
-        <nav class="navabr navbar-inverse">
+        <nav class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Brita Ramsay</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
+                <a class="navbar-brand" href="#">Brita Ramsay</a>
                 </div>
-                <ul class="nav navbar-nav navbar-right">
+                <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
                     <li><a href="index.html">About Me</a></li>
                     <li class="active"><a href="#">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                </div>
             </div>
         </nav>
 
         <div class="container">
             <div class="row">
-
-
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                     <div class="panel panel-default" id="main-section">
                         <div class="panel-heading" id="panel-heading">
