--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">About Me</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li class="active"><a href="#">Contact</a></li>
+                    <li><a href="index.html">About Me <span class="glyphicon glyphicon-home"></span></a></li>
+                    <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-picture"></span></a></li>
+                    <li class="active"><a href="#">Contact <span class="glyphicon glyphicon-envelope"></span></a></li>
                 </ul>
                 </div>
             </div>
