--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">About Me</a></li>
-                    <li class="active"><a href="#">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">About Me <span class="glyphicon glyphicon-home"></span></a></li>
+                    <li class="active"><a href="#">Portfolio <span class="glyphicon glyphicon-picture"></span></a></li>
+                    <li><a href="contact.html">Contact <span class="glyphicon glyphicon-envelope"></span></a></li>
                 </ul>
                 </div>
             </div>
