Added portfolio link to hangman game

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     </head>
     <body>
         <nav class="navbar navbar-inverse">
-            <div class="container">
+            <div class="container" id="nav-container">
                 <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>                        
-                </button>
-                <a class="navbar-brand" href="#">Brita Ramsay</a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                        
+                    </button>
+                    <a class="navbar-brand" href="#">Brita Ramsay</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">About Me <span class="glyphicon glyphicon-home"></span></a></li>
-                    <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-picture"></span></a></li>
-                    <li><a href="contact.html">Contact <span class="glyphicon glyphicon-envelope"></span></a></li>
-                </ul>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">About Me <span class="glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-picture"></span></a></li>
+                        <li><a href="contact.html">Contact <span class="glyphicon glyphicon-envelope"></span></a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -41,7 +41,6 @@
                         </div>
                         <div class="panel-body">
                             <p><img style="padding: 0 15px; float: left;" src="assets/images/linkdin.jpg" height="200">
-                            <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p> -->
                             I am a Computer Science student at the Univercity of Central Florida.  I only have 5 courses left until I graduate, but I am taking a semester off to attend the UCF Coding Bootcamp. I hope to become somewhat of a an expert on web development and build a great portfolio to show future employers. I am preparing to get an internship in the Fall semester that will help me get closer to a career in Computer Science and give me first-hand experience on a corpoarate devolopment team.</p>
                         </div>
                     </div> 
