--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,9 @@
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <div class="thumbnail">
-                                        <img src="assets/images/1.jpg" alt="hangman">
+                                        <a href="https://britaramsay.github.io/Hangman-Game/"><img src="assets/images/1.jpg" alt="hangman">
                                                 
-                                        <h3>Hangman</h3>
+                                        <h3>Hangman</h3></a>
                                     </div>
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
