Link to RPG game added

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,9 +59,9 @@
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <div class="thumbnail">
-                                        <img src="assets/images/2.jpg" alt="RGP Game">
+                                        <a href="https://britaramsay.github.io/Star-Wars-RPG/"><img src="assets/images/2.jpg" alt="RGP Game">
                                                     
-                                        <h3>RPG Game</h3>
+                                        <h3>RPG Game</h3></a>
                                     </div>
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
