Added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,9 @@
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <div class="thumbnail">
-                                        <img src="assets/images/3.jpg" alt="Trivia Game">
+                                        <a href="https://britaramsay.github.io/TriviaGame/"><img src="assets/images/3.jpg" alt="Trivia Game">
                                                     
-                                        <h3>Trivia Game</h3>
+                                        <h3>Trivia Game</h3></a>
                                     </div>
                                 </div>
                             </div>
