Added link to giphy api assignment

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,9 @@
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <div class="thumbnail">
-                                        <img src="assets/images/4.jpg" alt="Rock Paper Scissors">
+                                        <a href="https://britaramsay.github.io/Giphy-API-hw/"><img src="assets/images/4.jpg" alt="Giphy API Assignment">
                                                     
-                                        <h3>Rock Paper Scissors</h3>
+                                        <h3>Giphy API Assignment</h3></a>
                                     </div>
                                 </div>
                             </div>
