--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,15 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="thumbnail">
+                                        <a href="https://britaramsay.github.io/RPS-Multiplayer/"><img src="assets/images/4.jpg" alt="RPS Multiplayer">
+                                                    
+                                        <h3>Rock Paper Scissors</h3></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>         
