--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,13 @@
                                         <h3>Rock Paper Scissors</h3></a>
                                     </div>
                                 </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="thumbnail">
+                                        <a href="https://github.com/britaramsay/liri-node-app"><img src="assets/images/3.jpg" alt="Liri Node App">
+                                            
+                                        <h3>Liri Node App</h3></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
