Added Constructor Word Guess

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,15 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="thumbnail">
+                                        <a href="https://github.com/britaramsay/Constructor-Word-Guess"><img src="assets/images/1.jpg" alt="Constructor Word Guess">
+                                                    
+                                        <h3>Constructor Word Guess</h3></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>         
