--- a/portfolio.html
+++ b/portfolio.html
@@ -96,6 +96,13 @@
                                         <h3>Constructor Word Guess</h3></a>
                                     </div>
                                 </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="thumbnail">
+                                        <a href="https://github.com/britaramsay/bamazon"><img src="assets/images/4.jpg" alt="bamazon">
+                                                    
+                                        <h3>bamazon</h3></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
