Added more links

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="thumbnail">
+                                        <a href="https://shrouded-atoll-60290.herokuapp.com/"><img src="assets/images/new/9.png" alt="friendFinder">
+                                                    
+                                        <h3>Friend Finder</h3></a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="thumbnail">
+                                        <a href="https://whispering-sands-56007.herokuapp.com/"><img src="assets/images/new/10.png" alt="todolist">
+                                                    
+                                        <h3>MVC Todo List</h3></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>         
